--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "@expo-google-fonts/poppins": "^0.1.0",
     "@react-native-community/checkbox": "^0.5.5",
     "@react-native-community/masked-view": "0.1.10",
+    "@react-native-community/picker": "1.6.6",
+    "@react-native-picker/picker": "^1.9.2",
     "@react-navigation/native": "^5.8.6",
     "@react-navigation/stack": "^5.12.3",
     "@types/styled-components": "^5.1.4",
