--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-native-community/masked-view": "0.1.10",
     "@react-native-community/picker": "1.6.6",
     "@react-native-picker/picker": "^1.9.2",
+    "@react-navigation/material-top-tabs": "^5.3.9",
     "@react-navigation/native": "^5.8.6",
     "@react-navigation/stack": "^5.12.3",
     "@types/styled-components": "^5.1.4",
@@ -28,6 +29,7 @@
     "react-native-screens": "~2.10.1",
     "react-native-svg": "^12.1.0",
     "react-native-svg-transformer": "^0.14.3",
+    "react-native-tab-view": "^2.15.2",
     "react-native-web": "~0.13.12",
     "styled-components": "^5.2.1"
   },
