--- a/front/package.json
+++ b/front/package.json
@@ -18,8 +18,10 @@
     "@react-navigation/native": "^5.8.6",
     "@react-navigation/stack": "^5.12.3",
     "@types/styled-components": "^5.1.4",
+    "axios": "^0.21.0",
     "expo": "~39.0.2",
     "expo-font": "~8.3.0",
+    "expo-images-picker": "^1.0.7",
     "expo-status-bar": "~1.0.2",
     "react": "16.13.1",
     "react-dom": "16.13.1",
